# Machine_Learning

./: Readme.md  pyproject.toml
01_Learning_and_Practice/01_Foundations/: EDA_Bivariate.ipynb  Feature_Engineering.ipynb
01_Learning_and_Practice/01_Foundations/Encoding/: Ordinal&Label_Encoding.ipynb
01_Learning_and_Practice/02_Data_Engineering/: API_CSV.ipynb  CSV_TSV.ipynb
01_Learning_and_Practice/03_Regression/: 8_Regression_project.ipynb  LinearRegression.ipynb
01_Learning_and_Practice/04_Classification/: DecisionTree.ipynb  KNNClassifier.ipynb  LDA_QDA.ipynb  Logistic_Regression(2).ipynb
01_Learning_and_Practice/04_Classification/10_Project/: 10_Project.ipynb
01_Learning_and_Practice/06_Neural_Networks/: Backpropogation.ipynb  Find_S.ipynb
01_Learning_and_Practice/07_Computer_Vision/9_Unimodel_background_model/: 9_Unimodel_background_model.ipynb
03_Production_Projects/California_Housing_Prediction/models/: tuned_lightgbm_regressor_model.pkl
Class/: ML_Lab_1.ipynb  ML_Lab_7.ipynb  ML_Lab_8.ipynb
Classification/: 01_Logistic_Regression.ipynb  03_LDA_Project.ipynb
Project/: app.py  requirements.txt
Project/sun-city-valuer/: tailwind.config.ts
Projects/California_Housing/: package-lock.json
Supervised Learning/: 01_Simple_Linear_Regression.ipynb  05_MultiClass_MultiVariate_NB.ipynb  2_Multi_Variate_Linear_Regression.ipynb  3_Polynomial_regression.ipynb  4_bayes_classifier.ipynb  6_Ridge_Regression.ipynb  7_Lasso_N_Elastic_Net N GridSearch.ipynb
ml-100-days/: 100DaysML_001.ipynb  100DaysML_003.ipynb  100DaysML_006.ipynb  100DaysML_007.ipynb
(+5 files in other folders)
